# combo-ui-editor

./: .gitignore  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/theme-sync-server/: package.json  pnpm-lock.yaml  start-server.sh
src-tauri/theme-sync-server/src/: index.ts  simple-server.js
src/composables/: googleFonts.ts  useComponentRegistry.ts  useComponentStoreFactory.ts  useComponentTheme.ts  useDarkStyles.ts  useDualModePatch.ts  useFormsPersistence.ts  useGoogleFonts.ts  usePersistence.ts  usePreviewGrid.ts  useReadmeGenerator.ts  useStoreManager.ts  useStyleBuilder.ts  useTheme.ts  useThemeCompensation.ts  useThemeIO.ts  useThemeSync.ts  useThemeSyncLog.ts  useTypographyPersistence.ts  useUnitNumberUpdates.ts  useVariantManager.ts  useVariantPatch.ts
src/constants/: index.ts
src/css/: _editor.scss  _layout.scss  _previews.scss  _variables.scss  main.scss
src/db/: index.ts
src/directives/: wheelNumber.ts
src/i18n/: i18n.ts
src/json/: googleFontsInfo.json
src/stores/: accordion.ts  alert.ts  avatar.ts  badge.ts  button.ts  card.ts  chip.ts  divider.ts  forms.ts  listgroup.ts  navigation.ts  pagination.ts  popover.ts  progress.ts  spinner.ts  table.ts  theme.ts  tooltip.ts  typography.ts
src/types/: accordion.ts  alert.ts  avatar.ts  badge.ts  button.ts  card.ts  (+15 more)
(+67 files in other folders)
